<resources>
    <string name="app_name">RojeMusic</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="music_local">本地音乐</string>
    <string name="music_recent">最近播放</string>
    <string name="music_download">下载管理</string>
    <string name="music_fm">我的电台</string>
    <string name="music_fav">我的收藏</string>
    <string name="count_num">(%1$d)</string>
    <string name="create_play_list_title">创建的歌单(%1$d)</string>
    <string name="create_dialog_title">创建的歌单</string>
    <string name="myFavSong">我喜欢的音乐</string>
    <string name="pl_count">%1$d首</string>
    <string name="newPList">创建新歌单</string>
    <string name="pl_manage">歌单管理</string>
    <string name="new_sheet">新建歌单</string>
    <string name="newSheetHint">请输入歌单标题</string>
    <string name="newSheet_char_count">%1$d/40</string>
    <string name="cancel">取消</string>
    <string name="commit">提交</string>
    <string name="sm_title">已选择%1$d项</string>
    <string name="all_selected">全选</string>
    <string name="cancel_all_selected">取消全选</string>
    <string name="skip">跳过</string>
    <string name="collect_play_list_title">收藏的歌单(%1$d)</string>
    <string name="loading">努力加载中…</string>
    <string name="na_na">%1$s&#160;-&#160;%2$s</string>
    <string name="album_subtext">%1$d首&#160;%2$s</string>
    <string name="my_fm">私人FM</string>
    <string name="str_daily">每日推荐</string>
    <string name="str_upbill">排行榜</string>
    <string name="str_pl">歌单</string>
    <string name="recomm_pl">推荐歌单</string>
    <string name="recomm_pc">独家放送</string>
    <string name="recomm_newsong">最新音乐</string>
    <string name="sheet_name">歌单:%1$s</string>
    <string name="download">下载</string>
    <string name="share">分享</string>
    <string name="edit_sheet">编辑歌单信息</string>
    <string name="delete">删除</string>
    <string name="nav_str_msg">我的消息</string>
    <string name="nav_str_vip">vip会员</string>
    <string name="nav_str_store">商城</string>
    <string name="nav_str_baoyue">在线听歌免流量</string>
    <string name="nav_str_friend">我的好友</string>
    <string name="nav_str_person_nearby">附近的人</string>
    <string name="nav_str_skin">个性换肤</string>
    <string name="nav_str_tinggeshiqu">听歌识曲</string>
    <string name="nav_str_timing">定时停止播放</string>
    <string name="nav_str_scan">扫一扫</string>
    <string name="nav_str_music_alarm">音乐闹钟</string>
    <string name="nav_str_driver">驾驶模式</string>
    <string name="nav_str_cloud">音乐云盘</string>
    <string name="nav_str_login">立即登录</string>
    <string name="login">登录</string>
    <string name="nav_str_sign">签到</string>
    <string name="nav_str_nightmod">夜间模式</string>
    <string name="nav_str_setting">设置</string>
    <string name="nav_str_exit">退出</string>
    <string name="str_login_cellphone">手机号登录</string>
    <string name="str_login_register">注册</string>
    <string name="mob_log_title">手机号登录</string>
    <string name="ranking_list">排行榜</string>
    <string name="_86">+86</string>
    <string name="login_input_phone_number">请输入手机号码</string>
    <string name="play_count">%1$d万</string>
    <string name="share_song">%1$s&#160;分享单曲：</string>
    <string name="share_video">%1$s&#160;分享视频：</string>
    <string name="taste_song">根据你的音乐口味生成,每天6:00更新</string>
    <string name="playall">播放全部</string>
    <string name="select_more">多选</string>
    <string name="no_network">无可用网络,请开启网络后,点击重试!</string>
    <string name="load_fail">加载失败,请稍后点击重试!</string>
    <string name="daily_more_next_play">下一首播放</string>
    <string name="daily_more_collect">收藏到歌单</string>
    <string name="daily_more_dld">下载</string>
    <string name="daily_more_comment">评论</string>
    <string name="daily_more_share">分享</string>
    <string name="daily_more_artist">歌手:&#160;%1$s</string>
    <string name="daily_more_album">专辑:&#160;%1$s</string>
    <string name="daily_more_video">查看视频</string>
    <string name="daily_more_ringtone">彩铃</string>
    <string name="daily_more_boring">不感兴趣</string>
    <string name="dialog_tip">该歌曲开通会员即可畅享</string>
    <string name="dialog_song_name">歌曲:&#160;%1$s</string>
    <string name="dialog_get_vip">开通VIP</string>

    //ijkplayer
    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
</resources>
