<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_material_light_1"
    android:padding="16dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textAppearance="@style/TitleText18"
        android:text="@string/new_sheet"
        android:gravity="center_vertical"/>
    <EditText
        android:id="@+id/new_playlist_name"
        android:hint="@string/newSheetHint"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/count_hint"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:textAppearance="@style/hintText12"
        android:text="@string/newSheet_char_count"
        android:gravity="top|end"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end|center_vertical">
        <Button
            android:id="@+id/cancel_btn"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@drawable/dialog_button_selector"
            android:text="@string/cancel"
            android:background="@drawable/newsheet_btn_click_dark_bg"/>
        <Button
            android:id="@+id/commit_btn"
            style="?attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@drawable/dialog_button_selector"
            android:text="@string/commit"
            android:enabled="false"
            android:background="@drawable/newsheet_btn_click_dark_bg"/>
    </LinearLayout>

</LinearLayout>