<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="16dp"
    android:paddingBottom="4dp"
    android:gravity="center">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_song_name"
            android:textColor="@color/normalText"/>
        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_tip"
            android:textSize="@dimen/textSize10"
            android:textColor="@color/secondText"/>
    </LinearLayout>
    <TextView
        android:layout_marginLeft="@dimen/padding8"
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_get_vip"
        android:textSize="@dimen/textSize10"
        android:textColor="@color/cp_login_text_color_selector"
        android:background="@drawable/red_round_btn_bg"
        android:layout_marginStart="@dimen/padding8" />

</LinearLayout>