<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.roje.rojemusic.activity.MobileLoginActivity"
    android:background="@color/background_material_light_1">

    <com.bilibili.magicasakura.widgets.TintToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_primary_color"
        android:elevation="3dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/actionbar_back"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:title="@string/mob_log_title"
        app:titleTextColor="@android:color/white"
        tools:targetApi="lollipop">

    </com.bilibili.magicasakura.widgets.TintToolbar>

    <RelativeLayout
        android:id="@+id/phonelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_86"
            android:textSize="16sp"
            android:layout_alignBaseline="@+id/mobile_login_et_name"
            android:drawableLeft="@drawable/login_icn_mobile"
            android:drawableStart="@drawable/login_icn_mobile"/>

        <EditText
            android:id="@+id/mobile_login_et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_text_underline_selector"
            android:drawableEnd="@drawable/login_ipt_close"
            android:drawableRight="@drawable/login_ipt_close"
            android:gravity="start"
            android:inputType="phone"
            android:textSize="16sp"
            android:lines="1"
            android:maxLength="11"
            android:hint="@string/login_input_phone_number"
            android:textAlignment="textStart" />
    </RelativeLayout>

    <EditText
        android:id="@+id/mobile_login_et_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:lines="1"
        android:background="@drawable/login_text_underline_selector"
        android:drawableLeft="@drawable/login_icn_password"
        android:drawableStart="@drawable/login_icn_password"
        android:gravity="start"
        android:inputType="textPassword"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phonelayout" />

    <Button
        android:id="@+id/login"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_btn_selector"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobile_login_et_psw" />
</android.support.constraint.ConstraintLayout>
